# MedicamentRecommender

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
config/: Settings.py  model_config.py  settings.py
config/prompts/: case_extraction.txt
data/interim/case_annex/: annex_consequent.txt  compare_result.txt  extract_result.json
data/interim/user_input/: test_question.txt
data/processed/output/: llm_final_recommendations.txt
models/: download_ckip.py
prompt/: PromptTemplates.py  pharmacist.txt
src/: __init__.py  llm_pharmacist.py  pipeline.py  question_extraction.py  text_annex.py
src/core/: llm_pharmacist.py  pipeline.py  question_extraction.py
src/exceptions/: Exceptions.py
src/knowledge/: compare.py  vector_conversion.py
src/knowledge_process/: compare.py  vector_conversion.py
src/pharmacist_ai/: main.py
src/pharmacist_ai/core/: llm_pharmacist.py  pipeline.py  question_extraction.py
src/pharmacist_ai/knowledge/: compare.py
src/pharmacist_ai/utils/: text_annex.py
src/utils/: text_annex.py
