[project]
name = "medicamentrecommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.2",
    "openai==1.99.9",
    "python-dotenv==1.1.1",
    "sentence-transformers==5.1.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "transformers==4.55.2",
]
